fixed mobile nav overflow issue

--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -16,6 +16,9 @@
         width: 90%;
     }
     // Mobile Navigation
+    header {
+        overflow: hidden;
+    }
     header ul {
         flex-direction: column;
         position: absolute;
